# openssl-android-nofips

./: settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/mark/com/websocket_openssl_libuv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  WebSocket.cpp  WebSocketManager.cpp  WebSocketManager.h  native-lib.cpp
app/src/main/cpp/include/openssl/: aead.h  base64.h  bio.h  blowfish.h  bn.h  cast.h  cipher.h  cpu.h  curve25519.h  ec.h  ec_key.h  ecdh.h  ecdsa.h  engine.h  evp.h  hkdf.h  hmac.h  md4.h  nid.h  pem.h  poly1305.h  rand.h  rc4.h  ripemd.h  rsa.h  tls1.h  x509.h
app/src/main/cpp/openssl/: aes.h  asn1.h  asn1t.h  base.h  blowfish.h  buf.h  bytestring.h  chacha.h  cmac.h  conf.h  crypto.h  dh.h  digest.h  dsa.h  err.h  ex_data.h  lhash.h  mem.h  obj.h  pkcs7.h  pkcs8.h  pool.h  sha.h  ssl.h  ssl3.h  stack.h  thread.h  type_check.h  x509_vfy.h  x509v3.h
app/src/main/cpp/uWS/: Backend.h  CMakeLists.txt  Group.h  HTTPSocket.cpp  Hub.cpp  Hub.h  Libuv.h  Networking.h
app/src/main/java/mark/com/websocket_openssl_libuv/: App.java  MainActivity.java  WebSocketClient.java  WebSocketListener.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/mark/com/websocket_openssl_libuv/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
longlink/src/main/java/com/example/: WebSocket.java
